assets/styles.css
.box {  
	text-align: left;
	background-color: #578088;
	padding: 119px 68px 119px 68px;
	width: 1600px;
	height: 936px;
	margin: 100px;
}

body {
	background-color: #37555B;
}

.center{
	display: flex;
	justify-content: center;
	align-items: center;
}

.navbar{
	text-align: center;
	display: flex; 
	justify-content: center;
	align-items: center;
	box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
	position: fixed; /* Set the navbar to fixed position */
	top: 0; /* Position the navbar at the top of the page */
	width: 100%; /* Full width */
	margin-bottom:100px;
}

ul {
	list-style-type: none;
	display: inline-block;
	 margin: 0;
	 padding: 0;
	 overflow: hidden;
}

ul li{
	float: left;
}

ul li a{
	display: block;
	color: #ABC99E;
	text-align: center;
	padding: 14px 16px;
	text-decoration: none;
}

